--- a/security/bookinfo-policy.yaml
+++ b/security/bookinfo-policy.yaml
@@ -11,6 +11,6 @@ spec:
   - mtls: {}
   origins:
   - jwt:
-      issuer: "https://{YOUR_DOMAIN}/"
-      jwksUri: "https://{YOUR_DOMAIN}/.well-known/jwks.json"
+      issuer: "https://blog-mpharma.auth0.com/"
+      jwksUri: "https://blog-mpharma.auth0.com/.well-known/jwks.json"
   principalBinding: USE_ORIGIN
